# insighta-cli

./: .gitignore  README.md  pyproject.toml
insighta_cli/: __main__.py  auth.py  client.py  config.py  main.py
