[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insighta-cli"
version = "0.1.0"
description = "CLI for the Insighta Labs+ profiles API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
]

[project.scripts]
insighta = "insighta_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["insighta_cli"]
